exxtract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8888
+github.client.id=Iv1.51c789648b8bb579
+github.client.secret=8f3771cb55a7125b27cad095e6d756af339e5d7c
+github.redirect.uri=http://localhost:8888/callback
